fix: collapsing lines when whole text is <sub> or <sup>

--- a/scss/inc/_base.scss
+++ b/scss/inc/_base.scss
@@ -211,7 +211,6 @@ body {
     sub,
     sup {
         font-size: .75em;
-        line-height: 0;
         position: relative;
         vertical-align: baseline;
     }
